[package]
name = "egui-sfml"
version = "0.1.0"
authors = ["crumblingstatue <radiantstatue@gmail.com>"]
edition = "2018"

[dependencies]
egui = "0.18.1"
glu-sys = "0.1.4"
sfml = { git = "https://github.com/jeremyletang/rust-sfml", rev = "14f7e731d28ecfab255810abeabe5e1aa171701b", features = [
    "graphics",
], default-features = false }

[dev-dependencies]
egui_demo_lib = "0.18.0"
